syntax = "proto2";

package keyvent;

import "scalapb/scalapb.proto";
import "keyvent/core.proto";

option (scalapb.options) = {
    import: "mappers.TypeMappers._"
    import: "scala.collection.JavaConversions._"
    // All classes that extend a sealed trait need to be in the same Scala
    // file, so we set single_file to true.
    single_file: true
};

message CreateCustomer {
    option (scalapb.message).extends = "keyvent.core.Command";
    required CommandId commandId = 1;
    optional EntityId entityId =2;
    optional string foo = 3;
}

message ActivateCustomer {
    option (scalapb.message).extends = "keyvent.core.Command";
    required CommandId commandId = 1;
    required EntityId entityId =2;
    optional string bar = 3;
}

message CustomerCreated {
    option (scalapb.message).extends = "keyvent.core.Event";
    required EntityId entityId =1;
}

message CustomerActivated {
    option (scalapb.message).extends = "keyvent.core.Event";
    required EntityId entityId =1;
    optional string bar = 2;
}

// unit of work

message CustomerEvent {
    oneof test_oneof {
        CustomerCreated created = 1;
        CustomerActivated activated = 2;
    }
}

message CustomerUnitOfWork { // TODO add timestamp
    option (scalapb.message).extends = "keyvent.core.UnitOfWork";
    required UnitOfWorkId unitOfWorkId = 1;
    required CommandId commandId = 2;
    required EntityId entityId = 3;
    required Version version = 4;
    repeated CustomerEvent events = 5;
}

// services

service CustomerCommands {
    rpc Create (CreateCustomer) returns (CustomerUnitOfWork) {}
    rpc Activate (ActivateCustomer) returns (CommandValidation) {}
}
